# dune-curvilineargrid

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  config.h.cmake  configure.ac  dune-curvilineargrid.pc.in  dune.module
cmake/modules/: CMakeLists.txt  DuneCurvilineargrid.cmake  DuneCurvilineargridMacros.cmake  Makefile.am
doc/: Makefile.am
doc/doxygen/: Doxylocal
doc/installation-instructions/: readme.txt
doc/manual/: manual-appendix-geometry-helper.tex  manual-appendix-geometry-polynomial.tex  (+44 more)
dune/: CMakeLists.txt  Makefile.am
dune/curvilineargrid/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  curvilineargrid.hh
dune/curvilineargrid/common/: CMakeLists.txt  colorcoding.hh  constant.hh  loggingmessage.hh  loggingtimer.hh  mpimutex.hh  realtimelog.hh  vectorhelper.hh
dune/curvilineargrid/curvilineargrid/: CMakeLists.txt  backuprestore.hh  cachedcoordfunction.hh  capabilities.hh  communication.hh  coordfunction.hh  coordfunctioncaller.hh  cornerstorage.hh  curvilineargridfactory.hh  datahandle.hh  declaration.hh  entity.hh  entitypointer.hh  entityseed.hh  factory.hh  factorywrapper.hh  geometry.hh  grid.hh  gridfactory.hh  gridfamily.hh  gridview.hh  hostcorners.hh  identity.hh  idset.hh  indexsets.hh  intersection.hh  intersectioniterator.hh  iterator.hh  persistentcontainer.hh
dune/curvilineargrid/curvilineargrid/tmp/: gridfactory_old.hh  gridfamily_old.hh  gridview_old.hh
dune/curvilineargrid/curvilineargridbase/: CMakeLists.txt  Makefile.am  curvilinearghostconstructor.hh  curvilinearglobalindexconstructor.hh  curvilineargridbase.hh  curvilineargridbase_old.hh  curvilineargridbasefactory.hh  curvilineargridconstructor.hh  curvilineargridstorage.hh  curvilinearlooseoctree.hh  curvilinearoctant.hh  curvilinearoctreenode.hh  curvilinearperiodicconstructor.hh  curvilinearpostconstructor.hh
dune/curvilineargrid/curvilineargridbase/impl/: curvilinearghostconstructor.hh  curvilinearglobalindexconstructor.hh  curvilineargridconstructor.hh  curvilineargridstorage.hh  curvilinearlooseoctree.hh  curvilinearoctreenode.hh  curvilinearperiodicconstructor.hh  curvilinearpostconstructor.hh
dune/curvilineargrid/curvilineargridbase/methods/: curvilineargridbasecommunication.hh  curvilineargridbasecorner.hh  curvilineargridbaseedge.hh  curvilineargridbaseentity.hh  curvilineargridbaseindexset.hh  curvilineargridbaseintersection.hh  curvilineargridbaseproperty.hh  curvilinearoctreewrapper.hh
dune/curvilineargrid/curvilineargriddiagnostic/: curvilineargriddiagnostic.hh
dune/curvilineargrid/curvilineargridhowto/: CMakeLists.txt  creategrid.hh  tutorial10PeriodicBoundary.cc  tutorial1gettingstarted.cc  tutorial2traversal.cc  tutorial3visualisation.cc  tutorial4IntegrationGauss.cc  tutorial4IntegrationNormal.cc  tutorial4andHalfgausslaw.cc  tutorial5CommunicationConstant.cc  tutorial5CommunicationGlobalIndex.cc  tutorial6CommunicationConstant.cc  tutorial6CommunicationGlobalIndex.cc  tutorial6ParallelData.cc  tutorial6communication.cc  tutorial7GlobalBoundary.cc  tutorial7ParallelData.cc  tutorial8GlobalBoundary.cc  tutorial8InteriorBoundary.cc  tutorial9InteriorBoundary.cc  tutorial9PeriodicBoundary.cc
dune/curvilineargrid/feedback/: loggingmessage.hh
dune/curvilineargrid/femaxxgrid/: looseoctree.h  octant.h  tetmesh.h
dune/curvilineargrid/io/: Makefile  Makefile.am  Makefile.in
dune/curvilineargrid/io/file/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  curvilineargmshreader.hh  curvilineargmshreader_old.hh  curvilinearvtkentitysubset.hh  curvilinearvtkformat.hh  curvilinearvtkgridwriter.hh  curvilinearvtkwriter.hh  gmsh2dunemapper.hh
dune/curvilineargrid/io/file/curvilineargmshreaderdocu/: curvilinear-gmsh-reader-reader-documentation.aux  curvilinear-gmsh-reader-reader-documentation.tex
dune/curvilineargrid/io/file/gnuplot/: Makefile  Makefile.in
dune/curvilineargrid/io/file/test/: .triangle_test_output.vtk.kate-swp  CMakeLists.txt  Makefile.am  conformvolumevtktest.cc  curvilineargmshtest.cc  gmshtest.cc  gnuplottest.cc  nonconformboundaryvtktest.cc  sphere32.msh  sphere32ord2.msh  sphere32ord3.msh  sphere32ord5.msh  subsamplingvtktest.cc  test-linking.cc  vtksequencetest.cc  vtktest.cc
dune/curvilineargrid/io/file/test/examples/sphere2000ord5proc10/: curvreader_output_process_0.vtk  curvreader_output_process_1.vtk  curvreader_output_process_2.vtk  curvreader_output_process_3.vtk  curvreader_output_process_4.vtk  curvreader_output_process_5.vtk  curvreader_output_process_6.vtk  curvreader_output_process_7.vtk  curvreader_output_process_8.vtk  curvreader_output_process_9.vtk
dune/curvilineargrid/io/file/test/examples/sphere32ord5proc4/: curvreader_output_process_0.vtk  curvreader_output_process_1.vtk  curvreader_output_process_2.vtk  curvreader_output_process_3.vtk
dune/curvilineargrid/io/file/vtk/: Makefile  Makefile.in  basicwriter.hh  boundaryiterators.hh  boundarywriter.hh  common.hh  corner.hh  corneriterator.hh  dataarraywriter.hh  functionwriter.hh  pointiterator.hh  pvtuwriter.hh  skeletonfunction.hh  streams.hh  subsamplingvtkwriter.hh  volumeiterators.hh  volumewriter.hh  vtksequencewriter.hh  vtksequencewriterbase.hh  vtkwriter.hh  vtuwriter.hh
dune/curvilineargrid/test/: CMakeLists.txt  CMakeLists.txt~  Makefile.am~  test-allcommunicate.cc  test-curvgrid.cc  test-curvilineargrid.cc  test-diagnostics-base.cc  test-diagnostics.cc  test-globalcommmap.cc  test-mpimutex.cc  test-realtimelog.cc  test-vectorhelper.cc
dune/curvilineargrid/test/.deps/: test-identitygrid.Po  test-oned.Po  test-sgrid.Po  test_alugrid-test-alugrid.Po  test_curvilineargrid-test-curvilineargrid.Po  test_geogrid-test-geogrid.Po  test_mcmg_geogrid-test-mcmg-geogrid.Po  test_yaspgrid-test-yaspgrid.Po
dune/curvilineargrid/utility/: CMakeLists.txt  allcommunication.hh  curvilineargriddiagnostic.hh  diagnosticshelper.hh  globalboundarycontainer.hh  globalcommmap.hh  gridbasediagnostic.hh  griddiagnostic.hh  paralleldatawriter.hh
m4/: CMakeLists.txt  Makefile.am  dune-curvilineargrid.m4
src/: CMakeLists.txt  Makefile.am  dune_curvilineargrid.cc
(+29 files in other folders)
