
install(FILES
   capabilities.hh
   communication.hh
   declaration.hh
   entity.hh
   entitypointer.hh
   entityseed.hh
   factory.hh
   geometry.hh
   grid.hh
   idset.hh
   indexsets.hh
   intersection.hh
   intersectioniterator.hh
   iterator.hh
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/grid/curvilineargrid/curvilineargrid)
