curvilineargridincludedir = $(includedir)/dune/curvilineargrid/curvilineargridbase
curvilineargridinclude_HEADERS = curvilineargridbase.hh
curvilineargridinclude_HEADERS = curvilinearoctant.hh
curvilineargridinclude_HEADERS = curvilinearlooseoctree.hh


EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
